@@ -10,6 +10,7 @@
 """
 
 import sys
+from typing import List, Union
 
 import pytest
 
@@ -262,6 +263,47 @@ def test_show_inheritance_for_subclass_of_generic_type(app):
         '   A subclass of List[Union[int, float]]',
         '',
     ]
+
+
+@pytest.mark.sphinx('html', testroot='ext-autodoc')
+def test_autodoc_process_bases(app):
+    def autodoc_process_bases(app, name, obj, options, bases):
+        assert name == 'target.classes.Quux'
+        assert obj.__module__ == 'target.classes'
+        assert obj.__name__ == 'Quux'
+        assert options == {'show-inheritance': True,
+                           'members': []}
+        assert bases == [List[Union[int, float]]]
+
+        bases.pop()
+        bases.extend([int, str])
+
+    app.connect('autodoc-process-bases', autodoc_process_bases)
+
+    options = {'show-inheritance': None}
+    actual = do_autodoc(app, 'class', 'target.classes.Quux', options)
+    if sys.version_info < (3, 7):
+        assert list(actual) == [
+            '',
+            '.. py:class:: Quux(*args, **kwds)',
+            '   :module: target.classes',
+            '',
+            '   Bases: :class:`int`, :class:`str`',
+            '',
+            '   A subclass of List[Union[int, float]]',
+            '',
+        ]
+    else:
+        assert list(actual) == [
+            '',
+            '.. py:class:: Quux(iterable=(), /)',
+            '   :module: target.classes',
+            '',
+            '   Bases: :class:`int`, :class:`str`',
+            '',
+            '   A subclass of List[Union[int, float]]',
+            '',
+        ]
 
 
 @pytest.mark.sphinx('html', testroot='ext-autodoc')
